# bushevski-rent

./: .gitignore  BACKEND_REQUIREMENTS.md  DEVELOPER_README.md  Makefile  README.md  build_layer.sh  local-env.json  mypy.ini  openapi.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  samconfig.toml  serverless.yml  setup.cfg  template.yaml
.github/workflows/: cd.yml  ci.yml
src/api/: __init__.py  router.py  test_handler.py
src/api/admin/: create_blocked_date.py  create_pricing_rule.py  list_bookings.py  router.py  update_status.py
src/api/availability/: app.py
src/api/bookings/: create.py  get.py  router.py  upload_license.py
src/api/util/: cors.py
src/bushevski_rent/: __init__.py
src/layers/common_layer/: requirements.txt
src/models/: __init__.py  base.py  blocked_dates.py  booking.py  common.py  customer.py  pricing.py
src/services/: __init__.py  base.py  blocked_dates.py  booking.py  payment.py  pricing.py  service_registry.py  storage.py
src/utils/: dynamodb.py  email.py  middleware.py  pricing.py  storage.py
tests/: conftest.py
tests/unit/: test_dynamodb.py  test_email.py  test_middleware.py  test_pricing.py  test_storage.py
