[project]
name = "bushevski-rent"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Anton Rösler", email = "github@antonroesler.com" }
]
dependencies = [
    "pydantic>=2.10.6",
    "aws-lambda-powertools>=3.5.0",
    "stripe>=11.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bushevski_rent"]
